styles/spotlight.scss
.spotlight {
  &__wrap {
    background-image: url('../public/black_small.webp');
    background-position: center;
    background-repeat: no-repeat;
    background-size: cover;
    height: 100%;
    overflow: hidden;
    position: relative;
    transition: all 0.7s cubic-bezier(0.19, 1, 0.22, 1);
  }
  &__wrap-offers {
    background-image: url('../public/color_small.webp');
    background-position: center;
    background-repeat: no-repeat;
    background-size: cover;
    height: 100%;
    overflow: hidden;
    transition: all 0.7s cubic-bezier(0.19, 1, 0.22, 1);
  }
  &__point {
    position: absolute;
    height: 100%;
    width: 100%;
    transition: all 0.7s cubic-bezier(0.19, 1, 0.22, 1);
    background: rgba(255, 255, 255, 0.69);
    @media (min-width: $screen-sm-max) {
      background: radial-gradient(
        circle at var(--x, 50%) var(--y, 50%),
        transparent 160px,
        rgb(255, 255, 255) 200px
      );
    }
  }
}

.black {
  .spotlight__point {
    transition: all 0.5s;
    background: radial-gradient(
      circle at var(--x, 50%) var(--y, 50%),
      transparent 160px,
      rgb(19, 18, 19) 200px
    );
  }
}

